added docker files and added simple polling

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 # Consume folder to look for the transaction files
 CONSUME_PATH=
+
+# Maybe (Sure) finance API Key
+API_KEY=
+
+# Lookup interval for the transactions in the consume folder in seconds 
+LOOKUP_INTERVAL=5
