added accounts client to get the accounts list in sure

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Consume folder to look for the transaction files
 CONSUME_PATH=
 
-# Maybe (Sure) finance API Key
+# Maybe (Sure) finance API Credentials with read/write access
+API_URL=http://host.docker.internal:3000/api/v1/
 API_KEY=
 
 # Lookup interval for the transactions in the consume folder in seconds 
